# 2021-school-primitive-recursive

./: LICENSE  README.md
recursive/: CMakeLists.txt  aliases.hpp  eval.hpp  examples.hpp  general.hpp  minimisation.hpp  primitive.hpp  primitive_functions.hpp
recursive/detail/: arity.hpp  array.hpp  parallel_evaluation.hpp  span.hpp
